resdatadir = $(pkgdatadir)
nobase_dist_resdata_DATA = \
	ENCYC/FIRM/FACTORY.COL \
	ENCYC/FIRM/FACTORY.ICN \
	ENCYC/FIRM/FORT.COL \
	ENCYC/FIRM/FORT.ICN \
	ENCYC/FIRM/HARBOR.COL \
	ENCYC/FIRM/HARBOR.ICN \
	ENCYC/FIRM/INN.COL \
	ENCYC/FIRM/INN.ICN \
	ENCYC/FIRM/MARKET.COL \
	ENCYC/FIRM/MARKET.ICN \
	ENCYC/FIRM/MINE.COL \
	ENCYC/FIRM/MINE.ICN \
	ENCYC/FIRM/SCIENCE.COL \
	ENCYC/FIRM/SCIENCE.ICN \
	ENCYC/FIRM/WARFACT.COL \
	ENCYC/FIRM/WARFACT.ICN \
	ENCYC/GOD/CHINESE.COL \
	ENCYC/GOD/CHINESE.ICN \
	ENCYC/GOD/GREEK.COL \
	ENCYC/GOD/GREEK.ICN \
	ENCYC/GOD/JAPANESE.COL \
	ENCYC/GOD/JAPANESE.ICN \
	ENCYC/GOD/MAYA.COL \
	ENCYC/GOD/MAYA.ICN \
	ENCYC/GOD/NORMAN.COL \
	ENCYC/GOD/NORMAN.ICN \
	ENCYC/GOD/PERSIAN.COL \
	ENCYC/GOD/PERSIAN.ICN \
	ENCYC/GOD/VIKING.COL \
	ENCYC/GOD/VIKING.ICN \
	ENCYC/MONSTER/FIREKIN.COL \
	ENCYC/MONSTER/FIREKIN.ICN \
	ENCYC/MONSTER/GIANTET.COL \
	ENCYC/MONSTER/GIANTET.ICN \
	ENCYC/MONSTER/GITH.COL \
	ENCYC/MONSTER/GITH.ICN \
	ENCYC/MONSTER/GNOLL.COL \
	ENCYC/MONSTER/GNOLL.ICN \
	ENCYC/MONSTER/GOBLIN.COL \
	ENCYC/MONSTER/GOBLIN.ICN \
	ENCYC/MONSTER/GREMJERM.COL \
	ENCYC/MONSTER/GREMJERM.ICN \
	ENCYC/MONSTER/HEADLESS.COL \
	ENCYC/MONSTER/HEADLESS.ICN \
	ENCYC/MONSTER/HOBGLOB.COL \
	ENCYC/MONSTER/HOBGLOB.ICN \
	ENCYC/MONSTER/LIZARD.COL \
	ENCYC/MONSTER/LIZARD.ICN \
	ENCYC/MONSTER/LYW.COL \
	ENCYC/MONSTER/LYW.ICN \
	ENCYC/MONSTER/MAN.COL \
	ENCYC/MONSTER/MAN.ICN \
	ENCYC/MONSTER/ROCKMAN.COL \
	ENCYC/MONSTER/ROCKMAN.ICN \
	ENCYC/MONSTER/SKELETON.COL \
	ENCYC/MONSTER/SKELETON.ICN \
	ENCYC/MONSTER/STRUCT_1.COL \
	ENCYC/MONSTER/STRUCT_1.ICN \
	ENCYC/MONSTER/STRUCT_2.COL \
	ENCYC/MONSTER/STRUCT_2.ICN \
	ENCYC/MONSTER/STRUCT_3.COL \
	ENCYC/MONSTER/STRUCT_3.ICN \
	ENCYC/MONSTER/STRUCT_4.COL \
	ENCYC/MONSTER/STRUCT_4.ICN \
	ENCYC/SEAT/CHINESE.COL \
	ENCYC/SEAT/CHINESE.ICN \
	ENCYC/SEAT/GREEK.COL \
	ENCYC/SEAT/GREEK.ICN \
	ENCYC/SEAT/JAPANESE.COL \
	ENCYC/SEAT/JAPANESE.ICN \
	ENCYC/SEAT/MAYA.COL \
	ENCYC/SEAT/MAYA.ICN \
	ENCYC/SEAT/NORMAN.COL \
	ENCYC/SEAT/NORMAN.ICN \
	ENCYC/SEAT/PERSIAN.COL \
	ENCYC/SEAT/PERSIAN.ICN \
	ENCYC/SEAT/VIKING.COL \
	ENCYC/SEAT/VIKING.ICN \
	ENCYC/UNIT/BALLISTA.COL \
	ENCYC/UNIT/BALLISTA.ICN \
	ENCYC/UNIT/CANNON.COL \
	ENCYC/UNIT/CANNON.ICN \
	ENCYC/UNIT/CARAVEL.COL \
	ENCYC/UNIT/CARAVEL.ICN \
	ENCYC/UNIT/CATAPULT.COL \
	ENCYC/UNIT/CATAPULT.ICN \
	ENCYC/UNIT/CHINESE.COL \
	ENCYC/UNIT/CHINESE.ICN \
	ENCYC/UNIT/EXPCART.COL \
	ENCYC/UNIT/EXPCART.ICN \
	ENCYC/UNIT/FLAMETHR.COL \
	ENCYC/UNIT/FLAMETHR.ICN \
	ENCYC/UNIT/GALLEON.COL \
	ENCYC/UNIT/GALLEON.ICN \
	ENCYC/UNIT/GREEK.COL \
	ENCYC/UNIT/GREEK.ICN \
	ENCYC/UNIT/JAPANESE.COL \
	ENCYC/UNIT/JAPANESE.ICN \
	ENCYC/UNIT/MAYA.COL \
	ENCYC/UNIT/MAYA.ICN \
	ENCYC/UNIT/NORMAN.COL \
	ENCYC/UNIT/NORMAN.ICN \
	ENCYC/UNIT/PERSIAN.COL \
	ENCYC/UNIT/PERSIAN.ICN \
	ENCYC/UNIT/TRANSPOR.COL \
	ENCYC/UNIT/TRANSPOR.ICN \
	ENCYC/UNIT/VESSEL.COL \
	ENCYC/UNIT/VESSEL.ICN \
	ENCYC/UNIT/VIKING.COL \
	ENCYC/UNIT/VIKING.ICN \
	ENCYC2/GOD/EGYPTIAN.COL \
	ENCYC2/GOD/EGYPTIAN.ICN \
	ENCYC2/GOD/INDIAN.COL \
	ENCYC2/GOD/INDIAN.ICN \
	ENCYC2/GOD/ZULU.COL \
	ENCYC2/GOD/ZULU.ICN \
	ENCYC2/SEAT/EGYPTIAN.COL \
	ENCYC2/SEAT/EGYPTIAN.ICN \
	ENCYC2/SEAT/INDIAN.COL \
	ENCYC2/SEAT/INDIAN.ICN \
	ENCYC2/SEAT/ZULU.COL \
	ENCYC2/SEAT/ZULU.ICN \
	ENCYC2/UNIT/EGYPTIAN.COL \
	ENCYC2/UNIT/EGYPTIAN.ICN \
	ENCYC2/UNIT/F_BALLIS.COL \
	ENCYC2/UNIT/F_BALLIS.ICN \
	ENCYC2/UNIT/INDIAN.COL \
	ENCYC2/UNIT/INDIAN.ICN \
	ENCYC2/UNIT/ZULU.COL \
	ENCYC2/UNIT/ZULU.ICN \
	IMAGE/7K_ICON.BMP \
	IMAGE/CHINESE.COL \
	IMAGE/CHINESE.ICN \
	IMAGE/CREDITS1.COL \
	IMAGE/CREDITS1.ICN \
	IMAGE/CREDITS2.COL \
	IMAGE/CREDITS2.ICN \
	IMAGE/CREDITS3.COL \
	IMAGE/CREDITS3.ICN \
	IMAGE/CREDITS4.COL \
	IMAGE/CREDITS4.ICN \
	IMAGE/CREDITS6.COL \
	IMAGE/CREDITS6.ICN \
	IMAGE/EGYPTIAN.COL \
	IMAGE/EGYPTIAN.ICN \
	IMAGE/GREEK.COL \
	IMAGE/GREEK.ICN \
	IMAGE/HALLFAME.COL \
	IMAGE/HALLFAME.ICN \
	IMAGE/INDIAN.COL \
	IMAGE/INDIAN.ICN \
	IMAGE/JAPANESE.COL \
	IMAGE/JAPANESE.ICN \
	IMAGE/LOSEGAME.COL \
	IMAGE/LOSEGAME.ICN \
	IMAGE/MAINMENU.COL \
	IMAGE/MAINMENU.ICN \
	IMAGE/MAYA.COL \
	IMAGE/MAYA.ICN \
	IMAGE/NORMAN.COL \
	IMAGE/NORMAN.ICN \
	IMAGE/PERSIAN.COL \
	IMAGE/PERSIAN.ICN \
	IMAGE/RESULTS.COL \
	IMAGE/RESULTS.ICN \
	IMAGE/VIKING.COL \
	IMAGE/VIKING.ICN \
	IMAGE/ZULU.COL \
	IMAGE/ZULU.ICN \
	RESOURCE/A_WAVE1.RES \
	RESOURCE/A_WAVE2.RES \
	RESOURCE/CURSOR.RES \
	RESOURCE/EXPLMASK.BIN \
	RESOURCE/EXPREMAP.BIN \
	RESOURCE/FNT_BARD.RES \
	RESOURCE/FNT_CASA.RES \
	RESOURCE/FNT_CASA_88592.RES \
	RESOURCE/FNT_CASA_88593.RES \
	RESOURCE/FNT_CASA_88595.RES \
	RESOURCE/FNT_HITP.RES \
	RESOURCE/FNT_MID.RES \
	RESOURCE/FNT_MID_88592.RES \
	RESOURCE/FNT_MID_88593.RES \
	RESOURCE/FNT_MID_88595.RES \
	RESOURCE/FNT_NEWS.RES \
	RESOURCE/FNT_NEWS_88592.RES \
	RESOURCE/FNT_NEWS_88593.RES \
	RESOURCE/FNT_NEWS_88595.RES \
	RESOURCE/FNT_SAN.RES \
	RESOURCE/FNT_SAN_88592.RES \
	RESOURCE/FNT_SAN_88593.RES \
	RESOURCE/FNT_SAN_88595.RES \
	RESOURCE/FNT_SMAL.RES \
	RESOURCE/FNT_SMAL_88592.RES \
	RESOURCE/FNT_SMAL_88593.RES \
	RESOURCE/FNT_SMAL_88595.RES \
	RESOURCE/FNT_STD.RES \
	RESOURCE/FNT_STD_88592.RES \
	RESOURCE/FNT_STD_88593.RES \
	RESOURCE/FNT_STD_88595.RES \
	RESOURCE/HELP.RES \
	RESOURCE/HILL1.RES \
	RESOURCE/HILL2.RES \
	RESOURCE/HILL3.RES \
	RESOURCE/I_BUTTON.RES \
	RESOURCE/I_CURSOR.RES \
	RESOURCE/I_ENCYC.RES \
	RESOURCE/I_FIRM.RES \
	RESOURCE/I_FIRMDI.RES \
	RESOURCE/I_HILL1.RES \
	RESOURCE/I_HILL2.RES \
	RESOURCE/I_HILL3.RES \
	RESOURCE/I_ICON.RES \
	RESOURCE/I_IF.RES \
	RESOURCE/I_MENU.RES \
	RESOURCE/I_MENU2.RES \
	RESOURCE/I_PLANT1.RES \
	RESOURCE/I_PLANT2.RES \
	RESOURCE/I_PLANT3.RES \
	RESOURCE/I_RACE.RES \
	RESOURCE/I_RAW.RES \
	RESOURCE/I_ROCK1.RES \
	RESOURCE/I_ROCK2.RES \
	RESOURCE/I_ROCK3.RES \
	RESOURCE/I_SNOW.RES \
	RESOURCE/I_SPICT.RES \
	RESOURCE/I_TECH.RES \
	RESOURCE/I_TERA1.RES \
	RESOURCE/I_TERA2.RES \
	RESOURCE/I_TERA3.RES \
	RESOURCE/I_TERN1.RES \
	RESOURCE/I_TERN2.RES \
	RESOURCE/I_TERN3.RES \
	RESOURCE/I_TOWN.RES \
	RESOURCE/I_TPICT1.RES \
	RESOURCE/I_TPICT2.RES \
	RESOURCE/I_TPICT3.RES \
	RESOURCE/I_UNITGI.RES \
	RESOURCE/I_UNITKI.RES \
	RESOURCE/I_UNITLI.RES \
	RESOURCE/I_UNITSI.RES \
	RESOURCE/I_UNITTI.RES \
	RESOURCE/I_UNITUI.RES \
	RESOURCE/I_WALL.RES \
	RESOURCE/LOCALE.RES \
	RESOURCE/PAL_ENC.RES \
	RESOURCE/PAL_MENU.RES \
	RESOURCE/PAL_STD.RES \
	RESOURCE/PAL_WIN.RES \
	RESOURCE/PLANT1.RES \
	RESOURCE/PLANT2.RES \
	RESOURCE/PLANT3.RES \
	RESOURCE/PLANTBM1.RES \
	RESOURCE/PLANTBM2.RES \
	RESOURCE/PLANTBM3.RES \
	RESOURCE/ROCK1.RES \
	RESOURCE/ROCK2.RES \
	RESOURCE/ROCK3.RES \
	RESOURCE/ROCKANI1.RES \
	RESOURCE/ROCKANI2.RES \
	RESOURCE/ROCKANI3.RES \
	RESOURCE/ROCKBLK1.RES \
	RESOURCE/ROCKBLK2.RES \
	RESOURCE/ROCKBLK3.RES \
	RESOURCE/ROCKBMP1.RES \
	RESOURCE/ROCKBMP2.RES \
	RESOURCE/ROCKBMP3.RES \
	RESOURCE/STD.SET \
	RESOURCE/TERANM1.RES \
	RESOURCE/TERANM2.RES \
	RESOURCE/TERANM3.RES \
	RESOURCE/TERRAIN1.RES \
	RESOURCE/TERRAIN2.RES \
	RESOURCE/TERRAIN3.RES \
	RESOURCE/TERSUB.RES \
	RESOURCE/TUT_INTR.RES \
	RESOURCE/TUT_LIST.RES \
	RESOURCE/TUT_PICT.RES \
	RESOURCE/TUT_TEXT.RES \
	SCENARI2/SCN_01.SCN \
	SCENARI2/SCN_01.SCP \
	SCENARI2/SCN_01.SCT \
	SCENARI2/SCN_02.SCN \
	SCENARI2/SCN_02.SCP \
	SCENARI2/SCN_02.SCT \
	SCENARI2/SCN_03.SCN \
	SCENARI2/SCN_03.SCP \
	SCENARI2/SCN_03.SCT \
	SCENARI2/SCN_04.SCN \
	SCENARI2/SCN_04.SCP \
	SCENARI2/SCN_04.SCT \
	SCENARI2/SCN_05.SCN \
	SCENARI2/SCN_05.SCP \
	SCENARI2/SCN_05.SCT \
	SCENARI2/SCN_06.SCN \
	SCENARI2/SCN_06.SCP \
	SCENARI2/SCN_06.SCT \
	SCENARI2/SCN_07.SCN \
	SCENARI2/SCN_07.SCP \
	SCENARI2/SCN_07.SCT \
	SCENARI2/SCN_08.SCN \
	SCENARI2/SCN_08.SCP \
	SCENARI2/SCN_08.SCT \
	SCENARI2/SCN_09.SCN \
	SCENARI2/SCN_09.SCP \
	SCENARI2/SCN_09.SCT \
	SCENARI2/SCN_10.SCN \
	SCENARI2/SCN_10.SCP \
	SCENARI2/SCN_10.SCT \
	SCENARI2/SCN_11.SCN \
	SCENARI2/SCN_11.SCP \
	SCENARI2/SCN_11.SCT \
	SCENARI2/SCN_12.SCN \
	SCENARI2/SCN_12.SCP \
	SCENARI2/SCN_12.SCT \
	SCENARI2/SCN_13.SCN \
	SCENARI2/SCN_13.SCP \
	SCENARI2/SCN_13.SCT \
	SCENARI2/SCN_14.SCN \
	SCENARI2/SCN_14.SCP \
	SCENARI2/SCN_14.SCT \
	SCENARI2/SCN_15.SCN \
	SCENARI2/SCN_15.SCP \
	SCENARI2/SCN_15.SCT \
	SCENARI2/config.txt \
	SCENARIO/7FOR7.SCN \
	SCENARIO/7FOR7.SCP \
	SCENARIO/7FOR7.SCT \
	SCENARIO/C&D.SCN \
	SCENARIO/C&D.SCP \
	SCENARIO/C&D.SCT \
	SCENARIO/DESBOW.SCN \
	SCENARIO/DESBOW.SCP \
	SCENARIO/DESBOW.SCT \
	SCENARIO/DESPERDO.SCN \
	SCENARIO/DESPERDO.SCP \
	SCENARIO/DESPERDO.SCT \
	SCENARIO/ERADICAT.SCN \
	SCENARIO/ERADICAT.SCP \
	SCENARIO/ERADICAT.SCT \
	SCENARIO/FTFRAUTN.SCN \
	SCENARIO/FTFRAUTN.SCP \
	SCENARIO/FTFRAUTN.SCT \
	SCENARIO/H&M.SCN \
	SCENARIO/H&M.SCP \
	SCENARIO/H&M.SCT \
	SCENARIO/INSULPOS.SCN \
	SCENARIO/INSULPOS.SCP \
	SCENARIO/INSULPOS.SCT \
	SCENARIO/IRONFIST.SCN \
	SCENARIO/IRONFIST.SCP \
	SCENARIO/IRONFIST.SCT \
	SCENARIO/KUKULCNS.SCN \
	SCENARIO/KUKULCNS.SCP \
	SCENARIO/KUKULCNS.SCT \
	SCENARIO/MAKEBREK.SCN \
	SCENARIO/MAKEBREK.SCP \
	SCENARIO/MAKEBREK.SCT \
	SCENARIO/MELTPOT.SCN \
	SCENARIO/MELTPOT.SCP \
	SCENARIO/MELTPOT.SCT \
	SCENARIO/MONORWAR.SCN \
	SCENARIO/MONORWAR.SCP \
	SCENARIO/MONORWAR.SCT \
	SCENARIO/NEWWORLD.SCN \
	SCENARIO/NEWWORLD.SCP \
	SCENARIO/NEWWORLD.SCT \
	SCENARIO/NORMAN.SCN \
	SCENARIO/NORMAN.SCP \
	SCENARIO/NORMAN.SCT \
	SCENARIO/NOTLOST.SCN \
	SCENARIO/NOTLOST.SCP \
	SCENARIO/NOTLOST.SCT \
	SCENARIO/PIRATES.SCN \
	SCENARIO/PIRATES.SCP \
	SCENARIO/PIRATES.SCT \
	SCENARIO/PRNCTKAO.SCN \
	SCENARIO/PRNCTKAO.SCP \
	SCENARIO/PRNCTKAO.SCT \
	SCENARIO/QUESUCCN.SCN \
	SCENARIO/QUESUCCN.SCP \
	SCENARIO/QUESUCCN.SCT \
	SCENARIO/RESDEP.SCN \
	SCENARIO/RESDEP.SCP \
	SCENARIO/RESDEP.SCT \
	SCENARIO/TREADCAR.SCN \
	SCENARIO/TREADCAR.SCP \
	SCENARIO/TREADCAR.SCT \
	SCENARIO/VIKBLITZ.SCN \
	SCENARIO/VIKBLITZ.SCP \
	SCENARIO/VIKBLITZ.SCT \
	SCENARIO/WEAKENED.SCN \
	SCENARIO/WEAKENED.SCP \
	SCENARIO/WEAKENED.SCT \
	SCENARIO/config.txt \
	SOUND/FIRE.WAV \
	SOUND/QUAKE.WAV \
	SOUND/RAIN.WAV \
	SOUND/THUNDER.WAV \
	SOUND/WIND.WAV \
	SPRITE/BAATEZU.SPR \
	SPRITE/BALLISTA.SPR \
	SPRITE/CANBALL.SPR \
	SPRITE/CANBALLA.SPR \
	SPRITE/CANBALLS.SPR \
	SPRITE/CANNON.SPR \
	SPRITE/CANSMOKE.SPR \
	SPRITE/CARAVAN.SPR \
	SPRITE/CARAVEL.SPR \
	SPRITE/CARAVE_S.SPR \
	SPRITE/CATAPULT.SPR \
	SPRITE/CATFIRE.SPR \
	SPRITE/CATFIREA.SPR \
	SPRITE/CATFIRES.SPR \
	SPRITE/CATSTONA.SPR \
	SPRITE/CATSTONE.SPR \
	SPRITE/CATSTONS.SPR \
	SPRITE/CHDRAGON.SPR \
	SPRITE/CHINESE.SPR \
	SPRITE/CH_ARROW.SPR \
	SPRITE/DRAGON.SPR \
	SPRITE/DR_ARROW.SPR \
	SPRITE/EGYPTIAN.SPR \
	SPRITE/EG_ARROW.SPR \
	SPRITE/EG_GOD.SPR \
	SPRITE/EG_POWAR.SPR \
	SPRITE/EXPCART.SPR \
	SPRITE/FB_ARRA0.SPR \
	SPRITE/FB_ARROW.SPR \
	SPRITE/FB_ARRS0.SPR \
	SPRITE/FCATAPUL.SPR \
	SPRITE/FIREKIN.SPR \
	SPRITE/FLAMETHR.SPR \
	SPRITE/FL_ARROW.SPR \
	SPRITE/FPERSIAN.SPR \
	SPRITE/F_BALLIS.SPR \
	SPRITE/GALLEON.SPR \
	SPRITE/GALLEO_S.SPR \
	SPRITE/GC_ARROW.SPR \
	SPRITE/GE_STAR.SPR \
	SPRITE/GIANTET.SPR \
	SPRITE/GITH.SPR \
	SPRITE/GI_STAR.SPR \
	SPRITE/GJ_STAR.SPR \
	SPRITE/GNOLL.SPR \
	SPRITE/GOBLIN.SPR \
	SPRITE/GP_STAR.SPR \
	SPRITE/GREEK.SPR \
	SPRITE/GREMJERM.SPR \
	SPRITE/GZ_STAR.SPR \
	SPRITE/HEADLESS.SPR \
	SPRITE/HITSPAR2.SPR \
	SPRITE/HITSPARK.SPR \
	SPRITE/HOBGLOB.SPR \
	SPRITE/INDIAN.SPR \
	SPRITE/IN_GOD.SPR \
	SPRITE/JAPANESE.SPR \
	SPRITE/JA_GOD.SPR \
	SPRITE/JA_POWER.SPR \
	SPRITE/KUKULCAN.SPR \
	SPRITE/LIZARD.SPR \
	SPRITE/LYW.SPR \
	SPRITE/MAN.SPR \
	SPRITE/MAYA.SPR \
	SPRITE/MOLDMAN.SPR \
	SPRITE/NORMAN.SPR \
	SPRITE/NO_ARROW.SPR \
	SPRITE/PEHEALER.SPR \
	SPRITE/PERSIAN.SPR \
	SPRITE/PE_ARROW.SPR \
	SPRITE/PE_POWAR.SPR \
	SPRITE/PHEONIX.SPR \
	SPRITE/RM_ARROW.SPR \
	SPRITE/ROCKMAN.SPR \
	SPRITE/SKELETON.SPR \
	SPRITE/STEAM.SPR \
	SPRITE/TC_ARR00.SPR \
	SPRITE/TC_ARR01.SPR \
	SPRITE/TC_ARR02.SPR \
	SPRITE/TC_ARRA0.SPR \
	SPRITE/TC_ARRA1.SPR \
	SPRITE/TC_ARRA2.SPR \
	SPRITE/TC_ARRS0.SPR \
	SPRITE/TC_ARRS1.SPR \
	SPRITE/TC_ARRS2.SPR \
	SPRITE/TORNADO.SPR \
	SPRITE/TRANSPOR.SPR \
	SPRITE/TRANSP_S.SPR \
	SPRITE/VESSEL.SPR \
	SPRITE/VESSEL_S.SPR \
	SPRITE/VIKING.SPR \
	SPRITE/VI_GOD.SPR \
	SPRITE/V_ARROW.SPR \
	SPRITE/V_SPLASH.SPR \
	SPRITE/ZULU.SPR \
	SPRITE/ZU_ARROW.SPR \
	SPRITE/ZU_GOD.SPR \
	TUTORIAL/10CAPTUR.TUT \
	TUTORIAL/1BAS_MIL.TUT \
	TUTORIAL/2BAS_ECO.TUT \
	TUTORIAL/2B_TRADE.TUT \
	TUTORIAL/3RESEARC.TUT \
	TUTORIAL/4WEAPONS.TUT \
	TUTORIAL/5BAS_NAV.TUT \
	TUTORIAL/6SEATRAD.TUT \
	TUTORIAL/7MERCENA.TUT \
	TUTORIAL/8FRYHTAN.TUT \
	TUTORIAL/9SEATPOW.TUT \
	TUTORIAL/LOYALTY.TUT \
	TUTORIAL/SPYING.TUT \
	TUTORIAL/config.txt
