noinst_HEADERS = \
	ALL.h \
	COLCODE.h \
	COLOR.h \
	CRC.h \
	CmdLine.h \
	GAMEDEF.h \
	IMGFUN.h \
	KEY.h \
	LocaleRes.h \
	MPTYPES.h \
	OANLINE.h \
	OAUDIO.h \
	OBATTLE.h \
	OBLOB.h \
	OBOX.h \
	OBULLET.h \
	OBUTT3D.h \
	OBUTTCUS.h \
	OBUTTON.h \
	OB_FLAME.h \
	OB_HOMIN.h \
	OB_PROJ.h \
	OCOLTBL.h \
	OCONFIG.h \
	OCRC_STO.h \
	ODATE.h \
	ODB.h \
	ODIR.h \
	ODYNARR.h \
	ODYNARRB.h \
	OEFFECT.h \
	OERRCTRL.h \
	OERROR.h \
	OEXPMASK.h \
	OFILE.h \
	OFILETXT.h \
	OFIRERES.h \
	OFIRM.h \
	OFIRMA.h \
	OFIRMALL.h \
	OFIRMDIE.h \
	OFIRMID.h \
	OFIRMRES.h \
	OFLAME.h \
	OFONT.h \
	OF_BASE.h \
	OF_CAMP.h \
	OF_FACT.h \
	OF_HARB.h \
	OF_INN.h \
	OF_MARK.h \
	OF_MINE.h \
	OF_MONS.h \
	OF_RESE.h \
	OF_WAR.h \
	OGAME.h \
	OGAMESET.h \
	OGAMHALL.h \
	OGET.h \
	OGETA.h \
	OGFILE.h \
	OGF_V1.h \
	OGODRES.h \
	OGRPSEL.h \
	OHELP.h \
	OHILLRES.h \
	OHSETRES.h \
	OIMGRES.h \
	OINFO.h \
	OINGMENU.h \
	OISOAREA.h \
	OLIGHTN.h \
	OLOG.h \
	OLONGLOG.h \
	OLZW.h \
	OMATRIX.h \
	OMISC.h \
	OMLINK.h \
	OMONSRES.h \
	OMOUSE.h \
	OMOUSE2.h \
	OMOUSECR.h \
	OMUSIC.h \
	ONATION.h \
	ONATIONA.h \
	ONATIONB.h \
	ONEWS.h \
	OOPTMENU.h \
	OPLANT.h \
	OPLASMA.h \
	OPOWER.h \
	ORACERES.h \
	ORAIN.h \
	ORAWRES.h \
	OREBEL.h \
	OREGION.h \
	OREGIONS.h \
	OREMOTE.h \
	OREMOTEQ.h \
	ORES.h \
	ORESDB.h \
	ORESTXT.h \
	ORESX.h \
	OROCK.h \
	OROCKRES.h \
	OSCROLL.h \
	OSE.h \
	OSERES.h \
	OSFRMRES.h \
	OSITE.h \
	OSKILL.h \
	OSLIDCUS.h \
	OSLIDER.h \
	OSNOW.h \
	OSNOWG.h \
	OSNOWRES.h \
	OSPATH.h \
	OSPINNER.h \
	OSPREUSE.h \
	OSPRITE.h \
	OSPRTRES.h \
	OSPY.h \
	OSTR.h \
	OSYS.h \
	OSaveGameArray.h \
	OSaveGameInfo.h \
	OSaveGameProvider.h \
	OTALKMSG.h \
	OTALKRES.h \
	OTARRAY.h \
	OTECHRES.h \
	OTERRAIN.h \
	OTORNADO.h \
	OTOWN.h \
	OTOWNREC.h \
	OTOWNRES.h \
	OTUTOR.h \
	OTownNetwork.h \
	OUNIT.h \
	OUNITALL.h \
	OUNITRES.h \
	OU_CARA.h \
	OU_CART.h \
	OU_GOD.h \
	OU_MARI.h \
	OU_MONS.h \
	OU_VEHI.h \
	OVBROWIF.h \
	OVBROWSE.h \
	OVGA.h \
	OVGABUF.h \
	OVGALOCK.h \
	OVIDEO.h \
	OVOLUME.h \
	OVQUEUE.h \
	OWALLRES.h \
	OWARPT.h \
	OWEATHER.h \
	OWORLD.h \
	OWORLDMT.h \
	RESOURCE.h \
	ReplayFile.h \
	WALLTILE.h \
	WebService.h \
	asmfun.h \
	audio_base.h \
	audio_stream.h \
	c99_printf.h \
	dbglog.h \
	file_input_stream.h \
	file_io_visitor.h \
	file_output_stream.h \
	file_reader.h \
	file_util.h \
	file_writer.h \
	gettext-gnu.h \
	gettext.h \
	input_stream.h \
	mem_input_stream.h \
	misc_uuid.h \
	multiplayer.h \
	openal_audio.h \
	output_stream.h \
	platform.h \
	player_desc.h \
	posix_string_compat.h \
	session_desc.h \
	storage_constants.h \
	version.h \
	vga_util.h \
	wav_stream.h
